# OOP_Lab4

./: CMakeLists.txt  README.md
src/: array.h  figure.h  figures.h  main.cpp  point.h
tests/: test_figures.cpp
